test/syc/bad/longvoid.c
/*
 * Both long and void specifier
 */

long void a;
